tdf#67873 do not drop empty text lines

Change-Id: I667ff13e01ae3b47b62267ad0c911d9d806d0cb6